--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <title>FourDFlight</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
+    <script src="libs/jquery.hotkeys.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
-     <div id="div"></div>
+     <canvas id="canvas" width="500" height="500"></canvas>
   </body>
 </html> 
