--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
     <script src="libs/jquery.hotkeys.js"></script>
-    <script src="main.js"></script>
+    <script src="build.js"></script>
   </head>
   <body>
      <canvas id="canvas" width="300" height="200"></canvas>
