unit testing and big refactor
set up unit testing usin ts-node
Needed to change source to proper modules

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>FourDFlight</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
     <script src="libs/jquery.hotkeys.js"></script>
     <script src="build.js"></script>
   </head>
   <body>
-     <canvas id="canvas" width="300" height="200"></canvas>
+    <canvas id="canvas" width="300" height="200"></canvas>
   </body>
-</html> 
+</html>
